force-app/main/default/objects/Volunteer__c/Volunteer__c.object-meta.xml
<CustomObject>
    <description>for Health Awareness Lightning App. BMI Lightning Components</description>
    <label>Volunteer</label>
    <nameField>
        <label>Volunteer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>