force-app/main/default/objects/Volunteer__c/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <inlineHelpText>Select Your Blood Type (Group)</inlineHelpText>
    <label>Blood Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Positive</fullName>
            </value>
            <value>
                <fullName>B Positive</fullName>
            </value>
            <value>
                <fullName>AB Positive</fullName>
            </value>
            <value>
                <fullName>O Positive</fullName>
            </value>
            <value>
                <fullName>A Negative</fullName>
            </value>
            <value>
                <fullName>B Negative</fullName>
            </value>
            <value>
                <fullName>AB Negative</fullName>
            </value>
            <value>
                <fullName>O Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>