force-app/main/default/objects/Volunteer__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF( BMI__c &lt; 18.5, &quot;UNDER-WEIGHT&quot;,  IF(  AND( BMI__c &gt;= 18.5, BMI__c &lt; 25) , &quot;NORMAL-WEIGHT&quot;, IF(BMI__c &gt;= 25,&quot;OVER-WEIGHT&quot;,&quot;&quot;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>