force-app/main/default/objects/Volunteer__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <inlineHelpText>Enter in &quot;MM/DD/YYYY&quot; format</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>