force-app/main/default/objects/Volunteer__c/fields/FaceBook__c.field-meta.xml
<CustomField>
    <fullName>FaceBook__c</fullName>
    <label>FaceBook</label>
    <type>Url</type>
</CustomField>