force-app/main/default/objects/Volunteer__c/fields/Height_in_CMs__c.field-meta.xml
<CustomField>
    <fullName>Height_in_CMs__c</fullName>
    <inlineHelpText>Enter in CentiMeters</inlineHelpText>
    <label>Height in CMs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>