force-app/main/default/objects/Volunteer__c/fields/Weight_in_KGs__c.field-meta.xml
<CustomField>
    <fullName>Weight_in_KGs__c</fullName>
    <label>Weight in KGs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>